--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/public/bootstrap.min.css">
+  <link rel="stylesheet" href="/public/assets/css/bootstrap.min.css">
   <title>Shopping Cart</title>
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  <script src="./public/bootstrap.min.js"></script>
+  <script src="./public/assets/js/bootstrap.min.js"></script>
 </body>
 
 </html>
